--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#projects">Gallery</a>
+              <a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a>
             </li>
           </ul>
         </div>
