--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
         </div>
       </div>
     </nav>
-    <section class="projects-section">
+    <!-- Poster section -->
+    <section class="projects-section poster-section">
       <div class="container-fluid">
-        <!-- Featured Project Row-->
         <div class="row align-items-center no-gutters">
-          <div class="col-md-5">
+          <div class="col-lg-5">
             <img
               class="img-fluid mb-3 mb-lg-0"
               src="assets/img/bg-masthead.jpg"
               alt=""
             />
           </div>
-          <div class="col-md-7">
+          <div class="col-lg-7">
             <div class="featured-text text-center text-lg-left pl-4 pr-4 ml-4">
               <h2 class="text-uppercase">A film by Lauren Lox and Sheilava</h2>
               <p class="text-black-50 mb-0">
@@ -86,16 +86,16 @@
                 Rosa. Stay posted for more!
               </p>
             </div>
-            <div class="mt-4 ml-4 pl-3">
+            <div class="mt-4 ml-md-4 pl-md-3">
               <a
-                class="mx-2 mb-4 btn"
+                class="mx-2 mb-4 btn btn-light"
                 href="https://www.instagram.com/positivefilm2020/"
                 target="_blank"
                 rel="noopener noreferrer"
                 >Follow us on Instagram <i class="fab fa-instagram"></i
               ></a>
               <a
-                class="mx-2 mb-4 btn"
+                class="mx-2 mb-4 btn btn-light"
                 href="https://www.facebook.com/positivefilm2020"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -145,14 +145,15 @@
         </div>
       </div>
     </section>
-    <!-- Signup-->
+    <!-- Cast Crew -->
     <section class="projects-section" id="castandcrew">
       <div class="container">
         <h2 class="text-center text-uppercase mt-4 mb-4">Cast And Crew</h2>
-        <!-- Project One Row-->
+
+        <!-- Right -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
-            <img class="img-fluid" src="assets/img/sheila.jpeg" alt="" />
+            <img class="img-fluid w-100" src="assets/img/sheila.jpeg" alt="" />
           </div>
           <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
@@ -194,17 +195,16 @@
             </div>
           </div>
         </div>
-        <!-- Project Two Row-->
+
+        <!-- Left -->
         <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
-            <img class="img-fluid" src="assets/img/lauren.jpeg" alt="" />
+            <img class="img-fluid w-100" src="assets/img/lauren.jpeg" alt="" />
           </div>
           <div class="col-lg-6 order-lg-first">
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
-                <div
-                  class="project-text w-100 my-auto text-center text-lg-right"
-                >
+                <div class="project-text w-100 text-center text-lg-right">
                   <h2 class="text-white">Lauren Lox</h2>
                   <h6 class="text-white">Producer, Director, Writer, Editor</h6>
                   <p class="mb-0 text-white-50">
@@ -227,7 +227,7 @@
                       href="https://www.facebook.com/laurenloxofficial"
                       target="_blank"
                       rel="noopener noreferrer"
-                      >Follow Sheilava on Facebook
+                      >Follow Lauren on Facebook
                       <i class="fab fa-facebook-f"></i
                     ></a>
                   </div>
@@ -236,6 +236,237 @@
             </div>
           </div>
         </div>
+
+        <!-- Right -->
+        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+          <div class="col-lg-6">
+            <img class="img-fluid w-100" src="assets/img/anton.jpeg" alt="" />
+          </div>
+          <div class="col-lg-6">
+            <div class="bg-black text-center h-100 project">
+              <div class="d-flex h-100">
+                <div class="project-text w-100 text-center text-lg-left">
+                  <h2 class="text-white">Anton Savenko</h2>
+                  <h6 class="text-white">
+                    Director of Photography
+                  </h6>
+                  <p class="mb-0 text-white-50">
+                    Originally from Ukraine, Anton Savenko is an award winning
+                    cinematographer with a keen eye and a steady hand. Savenko
+                    moved to the U.S. to immerse himself among lucrative
+                    creatives in Austin’s booming film industry. He’s had the
+                    honor of working alongside countless noteworthy Producers
+                    and Directors throughout the Texas indie scene including
+                    Erik Bernard, Christine Chen, Brian Burns, and Ali
+                    Alkhafaji. With a humble nature and an endless work ethic,
+                    Savenko brings utmost passion and dedication to each and
+                    every project. Outside of making films, he wholly enjoys
+                    capturing live shows and events including episodes of Dr.
+                    Phil, Austin Spurs Basketball games, Austin Music Live’s
+                    weekly concert series, and nonprofit events such as the
+                    Anthropos Arts Austin Concert Series and LavaFest ATX Music
+                    for Wildlife Conservation.
+                  </p>
+                  <hr class="d-none d-lg-block mb-2 ml-0" />
+                  <div class="mt-4">
+                    <a
+                      class="mb-4 btn btn-dark"
+                      href="https://facebook.com/savenkofilm"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >Follow Anton on Facebook <i class="fab fa-facebook-f"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Left -->
+        <div class="row justify-content-center no-gutters">
+          <div class="col-lg-6">
+            <img class="img-fluid w-100" src="assets/img/alex.jpeg" alt="" />
+          </div>
+          <div class="col-lg-6 order-lg-first">
+            <div class="bg-black text-center h-100 project">
+              <div class="d-flex h-100">
+                <div class="project-text w-100 text-center text-lg-right">
+                  <h2 class="text-white">Jesus Alexandro Santos</h2>
+                  <h6 class="text-white">1st Assistant Camera</h6>
+                  <p class="mb-0 text-white-50">
+                    Alex is a filmmaker based in Austin, TX with nearly 10 years
+                    experience working with several production companies
+                    including Red Twit Entertainment and Wild Canvas Media
+                  </p>
+                  <hr class="d-none d-lg-block mb-0 mr-0" />
+                  <div class="mt-4">
+                    <a
+                      class="mb-4 btn btn-dark"
+                      href="https://facebook.com/jesus.a.santos.5"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >Follow Alex on Facebook <i class="fab fa-facebook-f"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Right -->
+        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+          <div class="col-lg-7">
+            <img
+              class="img-fluid w-100"
+              src="assets/img/maurizio.jpeg"
+              alt=""
+            />
+          </div>
+          <div class="col-lg-5">
+            <div class="bg-black text-center h-100 project">
+              <div class="d-flex h-100">
+                <div class="project-text w-100 text-center text-lg-left">
+                  <h2 class="text-white">Maurizio Rex Maya</h2>
+                  <h6 class="text-white">
+                    Sound Department
+                  </h6>
+                  <p class="mb-0 text-white-50">
+                    Rex is a Texas filmmaker with a variety of credits under his
+                    belt in addition to several of his own short films and
+                    features. He currently resides in Austin and enjoys working
+                    with his colleagues and friends at Red Twit Entertainment
+                    and Wild Canvas Media.
+                  </p>
+                  <hr class="d-none d-lg-block mb-2 ml-0" />
+                  <div class="mt-4">
+                    <a
+                      class="mb-4 btn btn-dark"
+                      href="https://www.facebook.com/maurizio.r.maya "
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >Follow Maurizio on Facebook
+                      <i class="fab fa-facebook-f"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Left -->
+        <div class="row justify-content-center no-gutters">
+          <div class="col-lg-6">
+            <img class="img-fluid w-100" src="assets/img/trent.jpeg" alt="" />
+          </div>
+          <div class="col-lg-6 order-lg-first">
+            <div class="bg-black text-center h-100 project">
+              <div class="d-flex h-100">
+                <div class="project-text w-100 text-center text-lg-right">
+                  <h2 class="text-white">Trent Baker</h2>
+                  <h6 class="text-white">Lighting Department</h6>
+                  <p class="mb-0 text-white-50">
+                    Trent is a filmmaker for several production companies in
+                    Austin, including Red Twit Entertainment and Wild Canvas
+                    Media to name a few. His passion is connecting with others
+                    on set and bringing the joy of filmmaking to those around
+                    him.
+                  </p>
+                  <hr class="d-none d-lg-block mb-0 mr-0" />
+                  <div class="mt-4">
+                    <a
+                      class="mb-4 btn btn-dark"
+                      href="https://www.facebook.com/profile.php?id=100006895396965"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >Follow Trent on Facebook <i class="fab fa-facebook-f"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Right -->
+        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+          <div class="col-lg-6">
+            <img class="img-fluid w-100" src="assets/img/pati.jpg" alt="" />
+          </div>
+          <div class="col-lg-6">
+            <div class="bg-black text-center h-100 project">
+              <div class="d-flex h-100">
+                <div class="project-text w-100 text-center text-lg-left">
+                  <h2 class="text-white">Pati Curi</h2>
+                  <h6 class="text-white">
+                    Hair & Makeup Artist
+                  </h6>
+                  <p class="mb-0 text-white-50">
+                    Austin native Pati Currie is an award winning makeup artist
+                    who has been working in the music and film industry for over
+                    20 years. In addition to constant portrait and print work,
+                    she has also worked on exciting projects such as Javelina
+                    Run, the proof of concept TV series White Talon City, a
+                    variety of television, print commercials, and music videos,
+                    and a large number of short films. She has a passion for
+                    special effects and customized makeup looks and always
+                    enjoys taking things to the next level.
+                  </p>
+                  <hr class="d-none d-lg-block mb-2 ml-0" />
+                  <div class="mt-4">
+                    <a
+                      class="mb-4 btn btn-dark"
+                      href="https://www.instagram.com/paticurriemua/?hl=en"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >Follow Pati on Instagram <i class="fab fa-instagram"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Left -->
+        <div class="row justify-content-center no-gutters">
+          <div class="col-lg-6">
+            <img
+              class="img-fluid w-100"
+              src="assets/img/christopher.jpeg"
+              alt=""
+            />
+          </div>
+          <div class="col-lg-6 order-lg-first">
+            <div class="bg-black text-center h-100 project">
+              <div class="d-flex h-100">
+                <div class="project-text w-100 text-center text-lg-right">
+                  <h2 class="text-white">Christopher De La Rosa</h2>
+                  <h6 class="text-white">On Set Photographer</h6>
+                  <p class="mb-0 text-white-50">
+                    Christopher is an Austin-based photographer that specializes
+                    in capturing live performances, concerts, and behind the
+                    scenes footage of film and television productions.
+                  </p>
+                  <hr class="d-none d-lg-block mb-0 mr-0" />
+                  <div class="mt-4">
+                    <a
+                      class="mb-4 btn btn-dark"
+                      href="https://christopheroftherose.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >Visit Christopher's Website
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- End of all bios -->
       </div>
     </section>
     <footer class="footer bg-black small text-center text-white-50">
