--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 >Cast & Crew</a
               >
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -467,6 +467,27 @@
         </div>
 
         <!-- End of all bios -->
+        <div class="row align-items-center no-gutters mb-4 mb-lg-5 mt-5">
+          <div class="col-xl-8 col-lg-7">
+            <img
+              class="img-fluid mb-3 mb-lg-0"
+              src="assets/img/crew.jpeg"
+              alt=""
+            />
+          </div>
+          <div class="col-xl-4 col-lg-5">
+            <div class="featured-text text-center text-lg-left">
+              <h4>THANK YOU TO OUR POSITIVE CREW</h4>
+              <p class="text-black-50 mb-0">
+                Our film wouldn’t be possible without the hard work and
+                execution of our talented crew. This “Positive” team includes
+                some of the Austin film scene’s best and brightest; people who
+                are constantly striving to challenge their abilities and bring
+                each story to life in new creative ways.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <footer class="footer bg-black small text-center text-white-50">
