--- a/index.html
+++ b/index.html
@@ -491,7 +491,9 @@
       </div>
     </section>
     <footer class="footer bg-black small text-center text-white-50">
-      <div class="container">Copyright © Positive Film 2020</div>
+      <div class="container">
+        Copyright © Positive Film 2020. Made With ❤️ in Austin, Texas.
+      </div>
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
