--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Positive 2020</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
       src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"
@@ -70,13 +69,15 @@
         <div class="row align-items-center no-gutters">
           <div class="col-lg-5">
             <img
-              class="img-fluid mb-3 mb-lg-0"
+              class="img-fluid w-100 ml-n3 mb-3 mb-lg-0"
               src="assets/img/bg-masthead.jpg"
               alt=""
             />
           </div>
           <div class="col-lg-7">
-            <div class="featured-text text-center text-lg-left pl-4 pr-4 ml-4">
+            <div
+              class="featured-text text-center text-lg-left px-0 px-lg-4 mx-0 mx-lg-4"
+            >
               <h2 class="text-uppercase">A film by Lauren Lox and Sheilava</h2>
               <p class="text-black-50 mb-0">
                 Welcome to the official page of Positive — discover the
@@ -86,32 +87,36 @@
                 Rosa. Stay posted for more!
               </p>
             </div>
-            <div class="mt-4 ml-md-4 pl-md-3">
-              <a
-                class="mx-2 mb-4 btn btn-light"
-                href="https://www.instagram.com/positivefilm2020/"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Follow us on Instagram <i class="fab fa-instagram"></i
-              ></a>
-              <a
-                class="mx-2 mb-4 btn btn-light"
-                href="https://www.facebook.com/positivefilm2020"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Follow us on Facebook <i class="fab fa-facebook-f"></i
-              ></a>
+            <div class="d-flex mt-4 ml-md-4 pl-md-3 mb-3">
+              <div>
+                <a
+                  class="mx-2 mb-4 btn btn-light"
+                  href="https://www.instagram.com/positivefilm2020/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Follow us on Instagram <i class="fab fa-instagram"></i
+                ></a>
+              </div>
+              <div>
+                <a
+                  class="mx-2 mb-4 btn btn-light"
+                  href="https://www.facebook.com/positivefilm2020"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Follow us on Facebook <i class="fab fa-facebook-f"></i
+                ></a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
     <!-- About-->
-    <section class="about-section text-center bg-black" id="about">
+    <section class="about-section text-center bg-black pb-2" id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-white mb-4 text-uppercase">
+            <h2 class="text-white text-uppercase">
               Positive: From a dream to the film
             </h2>
             <p class="text-white-50 pb-2">
@@ -125,17 +130,19 @@
             </p>
           </div>
         </div>
-        <div class="row d-flex justify-content-center pb-5">
-          <div class="mt-4 ml-4 pl-3">
+        <div class="d-flex justify-content-center pb-4 mb-0 mb-lg-3">
+          <div>
             <a
-              class="mx-2 mb-4 btn btn-dark"
+              class="mx-2 btn btn-dark"
               href="https://www.instagram.com/positivefilm2020/"
               target="_blank"
               rel="noopener noreferrer"
               >Like us on Instagram <i class="fab fa-instagram"></i
             ></a>
+          </div>
+          <div>
             <a
-              class="mx-2 mb-4 btn btn-dark"
+              class="mx-2 btn btn-dark"
               href="https://www.facebook.com/positivefilm2020"
               target="_blank"
               rel="noopener noreferrer"
@@ -197,7 +204,7 @@
         </div>
 
         <!-- Left -->
-        <div class="row justify-content-center no-gutters">
+        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
             <img class="img-fluid w-100" src="assets/img/lauren.jpeg" alt="" />
           </div>
@@ -284,7 +291,7 @@
         </div>
 
         <!-- Left -->
-        <div class="row justify-content-center no-gutters">
+        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
             <img class="img-fluid w-100" src="assets/img/alex.jpeg" alt="" />
           </div>
@@ -357,7 +364,7 @@
         </div>
 
         <!-- Left -->
-        <div class="row justify-content-center no-gutters">
+        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
             <img class="img-fluid w-100" src="assets/img/trent.jpeg" alt="" />
           </div>
@@ -431,7 +438,7 @@
         </div>
 
         <!-- Left -->
-        <div class="row justify-content-center no-gutters">
+        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
             <img
               class="img-fluid w-100"
@@ -492,7 +499,8 @@
     </section>
     <footer class="footer bg-black small text-center text-white-50">
       <div class="container">
-        Copyright © Positive Film 2020. Made With ❤️ in Austin, Texas.
+        Copyright © Positive Film 2020. Made With
+        <span class="text-white">❤️</span> in Austin, Texas.
       </div>
     </footer>
     <!-- Bootstrap core JS-->
