more pxl pushing

--- a/index.html
+++ b/index.html
@@ -87,10 +87,12 @@
                 Rosa. Stay posted for more!
               </p>
             </div>
-            <div class="d-flex mt-4 ml-md-4 pl-md-3 mb-3">
+            <div
+              class="d-flex flex-column flex-lg-row mt-4 ml-lg-4 pl-lg-3 mb-3"
+            >
               <div>
                 <a
-                  class="mx-2 mb-4 btn btn-light"
+                  class="d-block d-lg-inline mx-2 mb-4 btn btn-light"
                   href="https://www.instagram.com/positivefilm2020/"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -99,7 +101,7 @@
               </div>
               <div>
                 <a
-                  class="mx-2 mb-4 btn btn-light"
+                  class="d-block d-lg-inline mx-2 mb-4 btn btn-light"
                   href="https://www.facebook.com/positivefilm2020"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -112,7 +114,7 @@
       </div>
     </section>
     <!-- About-->
-    <section class="about-section text-center bg-black pb-2" id="about">
+    <section class="about-section text-center bg-black" id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
@@ -130,10 +132,12 @@
             </p>
           </div>
         </div>
-        <div class="d-flex justify-content-center pb-4 mb-0 mb-lg-3">
+        <div
+          class="d-flex flex-column flex-lg-row justify-content-center pb-2 mb-0 mb-lg-3"
+        >
           <div>
             <a
-              class="mx-2 btn btn-dark"
+              class="d-block d-lg-inline mx-2 mb-4 btn btn-dark"
               href="https://www.instagram.com/positivefilm2020/"
               target="_blank"
               rel="noopener noreferrer"
@@ -142,7 +146,7 @@
           </div>
           <div>
             <a
-              class="mx-2 btn btn-dark"
+              class="d-block d-lg-inline mx-2 btn btn-dark"
               href="https://www.facebook.com/positivefilm2020"
               target="_blank"
               rel="noopener noreferrer"
