--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 text-center text-lg-left">
-                  <h2 class="text-white">Pati Curi</h2>
+                  <h2 class="text-white">Pati Currie</h2>
                   <h6 class="text-white">
                     Hair & Makeup Artist
                   </h6>
