--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
                 >Cast & Crew</a
               >
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a>
-            </li> -->
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#behindthescenes"
+                >Behind The Scenes</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -66,33 +68,42 @@
     <!-- Poster section -->
     <section class="projects-section poster-section">
       <div class="container-fluid">
-        <div class="row align-items-center no-gutters">
+        <div class="row no-gutters">
           <div class="col-lg-5">
             <img
               class="img-fluid w-100 ml-n3 mb-3 mb-lg-0"
-              src="assets/img/bg-masthead.jpg"
+              src="assets/img/hero-min.png"
               alt=""
             />
           </div>
-          <div class="col-lg-7">
+          <div class="col-lg-7 mt-3">
             <div
-              class="featured-text text-center text-lg-left px-0 px-lg-4 mx-0 mx-lg-4"
+              class="featured-text text-center text-lg-left px-0 pr-lg-4 mx-0 mx-lg-4"
             >
               <h2 class="text-uppercase">A film by Lauren Lox and Sheilava</h2>
+              <p class="text-black-50">
+                9/19/20 - OUR FILM IS GOING WORLDWIDE!! Positive is an official
+                selection of the WRPN Women's International Film Festival— check
+                back soon for updates on screening and streaming!
+              </p>
               <p class="text-black-50 mb-0">
-                Welcome to the official page of Positive — discover the
-                storyline and inspiration, learn more about the cast and crew,
-                keep an eye out for updates on film festival submissions, and
-                check out our Behind The Scenes photography by Christopher De La
-                Rosa. Stay posted for more!
+                9/4/20 - "Positive" is a Finalist in the 2020 Single-Take
+                Challenge by Manasota Films LLC! Join us starting October 9th at
+                4pm CT for the Online Screening & Awards Ceremony where they’ll
+                stream our film and open the polls for you to vote POSITIVE for
+                the Audience Favorite!
+                <a
+                  href="https://fb.me/e/1n7NScNfh?ti=icl"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >RSVP here</a
+                >. And make sure to follow us for more updates:
               </p>
             </div>
-            <div
-              class="d-flex flex-column flex-lg-row mt-4 ml-lg-4 pl-lg-3 mb-3"
-            >
+            <div class="d-flex flex-column flex-xl-row mt-4 pl-xl-3 mb-3">
               <div>
                 <a
-                  class="d-block d-lg-inline mx-2 mb-4 btn btn-light"
+                  class="d-block d-xl-inline mx-2 mb-4 btn btn-light"
                   href="https://www.instagram.com/positivefilm2020/"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -101,7 +112,7 @@
               </div>
               <div>
                 <a
-                  class="d-block d-lg-inline mx-2 mb-4 btn btn-light"
+                  class="d-block d-xl-inline mx-2 mb-4 btn btn-light"
                   href="https://www.facebook.com/positivefilm2020"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -258,9 +269,7 @@
               <div class="d-flex h-100">
                 <div class="project-text w-100 text-center text-lg-left">
                   <h2 class="text-white">Anton Savenko</h2>
-                  <h6 class="text-white">
-                    Director of Photography
-                  </h6>
+                  <h6 class="text-white">Director of Photography</h6>
                   <p class="mb-0 text-white-50">
                     Originally from Ukraine, Anton Savenko is an award winning
                     cinematographer with a keen eye and a steady hand. Savenko
@@ -340,9 +349,7 @@
               <div class="d-flex h-100">
                 <div class="project-text w-100 text-center text-lg-left">
                   <h2 class="text-white">Maurizio Rex Maya</h2>
-                  <h6 class="text-white">
-                    Sound Department
-                  </h6>
+                  <h6 class="text-white">Sound Department</h6>
                   <p class="mb-0 text-white-50">
                     Rex is a Texas filmmaker with a variety of credits under his
                     belt in addition to several of his own short films and
@@ -411,9 +418,7 @@
               <div class="d-flex h-100">
                 <div class="project-text w-100 text-center text-lg-left">
                   <h2 class="text-white">Pati Currie</h2>
-                  <h6 class="text-white">
-                    Hair & Makeup Artist
-                  </h6>
+                  <h6 class="text-white">Hair & Makeup Artist</h6>
                   <p class="mb-0 text-white-50">
                     Austin native Pati Currie is an award winning makeup artist
                     who has been working in the music and film industry for over
@@ -476,8 +481,11 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
 
-        <!-- End of all bios -->
+    <section class="projects-section" id="behindthescenes">
+      <div class="container">
         <div class="row align-items-center no-gutters mb-4 mb-lg-5 mt-5">
           <div class="col-xl-8 col-lg-7">
             <img
@@ -499,8 +507,81 @@
             </div>
           </div>
         </div>
+        <div class="row align-items-center no-gutters mb-4 mb-lg-5 mt-5">
+          <div class="col-12 col-md-6">
+            <img class="img-fluid" src="assets/img/bts1.jpeg" alt="" />
+          </div>
+          <div class="col-12 col-md-6">
+            <img class="img-fluid" src="assets/img/bts4.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="row align-items-center no-gutters mb-4 mb-lg-5 mt-5">
+          <div class="col-12 col-md-6">
+            <img class="img-fluid" src="assets/img/bts3.jpeg" alt="" />
+          </div>
+          <div class="col-12 col-md-6">
+            <img class="img-fluid" src="assets/img/bts2.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="row align-items-center no-gutters mb-4 mb-lg-5 mt-5">
+          <div class="col-12 col-md-6">
+            <img class="img-fluid" src="assets/img/bts5.jpeg" alt="" />
+          </div>
+          <div class="col-12 col-md-6">
+            <img class="img-fluid" src="assets/img/bts6.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="row align-items-center no-gutters mb-4 mb-lg-5 mt-5">
+          <div class="col-12 col-md-6">
+            <img class="img-fluid" src="assets/img/bts7.jpeg" alt="" />
+          </div>
+          <div class="col-12 col-md-6">
+            <img class="img-fluid" src="assets/img/bts8.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="row align-items-center no-gutters mb-4 mb-lg-5 mt-5">
+          <div class="col-12 col-md-6">
+            <img class="img-fluid" src="assets/img/bts9.jpeg" alt="" />
+          </div>
+          <div class="col-12 col-md-6">
+            <img class="img-fluid" src="assets/img/bts10.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="row align-items-center no-gutters mb-4 mb-lg-5 mt-5">
+          <div class="col-12 col-md-6">
+            <img class="img-fluid" src="assets/img/bts11.jpeg" alt="" />
+          </div>
+          <div class="col-12 col-md-6">
+            <img class="img-fluid" src="assets/img/bts12.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="row align-items-center no-gutters mb-4 mb-lg-5 mt-5">
+          <div class="col-12 col-md-6">
+            <img class="img-fluid w-100" src="assets/img/bts17.jpeg" alt="" />
+          </div>
+          <div class="col-12 col-md-6">
+            <img class="img-fluid" src="assets/img/bts14.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="row align-items-center no-gutters mb-4 mb-lg-5 mt-5">
+          <div class="col-12 col-md-6">
+            <img class="img-fluid" src="assets/img/bts15.jpeg" alt="" />
+          </div>
+          <div class="col-12 col-md-6">
+            <img class="img-fluid" src="assets/img/bts16.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="row align-items-center no-gutters mb-4 mb-lg-5 mt-5">
+          <div class="col-12 col-md-6">
+            <img class="img-fluid" src="assets/img/bts13.jpeg" alt="" />
+          </div>
+          <div class="col-12 col-md-6">
+            <img class="img-fluid w-100" src="assets/img/bts18.jpeg" alt="" />
+          </div>
+        </div>
       </div>
     </section>
+
     <footer class="footer bg-black small text-center text-white-50">
       <div class="container">
         Copyright © Positive Film 2020. Made With
