--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 back soon for updates on screening and streaming!
               </p>
               <p class="text-black-50 mb-0">
-                9/4/20 - "Positive" is a Finalist in the 2020 Single-Take
+                9/4/20 - Positive is a Finalist in the 2020 Single-Take
                 Challenge by Manasota Films LLC! Join us starting October 9th at
                 4pm CT for the Online Screening & Awards Ceremony where they’ll
                 stream our film and open the polls for you to vote POSITIVE for
